[metadata]
name = smuggler
version = 
author = defparam
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KptCheeseWhiz/smuggler

[options]
py_modules = smuggler
python_requires = >=3.0
packages = 
  lib
  lib.colorama
  configs

[options.entry_points]
console_scripts =
    smuggler = smuggler:main
